--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/images/home-hero.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galia Mariani Stylist Portfolio</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <meta property="og:title" content="Galia Mariani Stylist Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://portfoliogaliamariani.netlify.app/images/home-hero.jpg" />
+    <meta property="og:image:width" content="1600" />
+    <meta property="og:image:height" content="900" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://portfoliogaliamariani.netlify.app/images/home-hero.jpg" />
 </head>
   <body>
     <div id="root"></div>
